# gestao-rh

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md
backend/: Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/app/: main.py
backend/app/api/: arquivo.py  assinaturas.py  auth_rh.py  candidatos.py  colaboradores.py  configuracoes.py  creche.py  creche_publico.py  crm.py  desempenho.py  desenvolvimento.py  diagnostico.py  documentos.py  entrada.py  ficha.py  incidencia_beneficios.py  lixeira.py  marca.py  modelos.py  organizacao.py  portal.py  postos.py  provas.py  revisao.py  rh_ficha.py  solicitacoes_assinatura.py  solicitacoes_externo.py  talentos.py  testagem.py  testes.py
backend/app/core/: bootstrap.py  config.py  security.py
backend/app/models/: assinatura.py  beneficio.py  candidato.py  configuracao.py  crm.py  desempenho.py  desenvolvimento.py  documento.py  evento.py  ficha.py  lixeira.py  modelo_documento.py  prova.py  solicitacao_assinatura.py  talento.py  testagem.py  teste.py  usuario_rh.py
backend/app/services/: auditoria.py  config_dinamica.py  creche_pdf.py  crm.py  desempenho.py  disc.py  dossie.py  email.py  export_planilha.py  export_tirvu.py  fichas.py  gmail.py  idempotencia.py  import_ponto.py  kba.py  limite.py  lixeira.py  m365.py  magic_link.py  marca.py  matricula_reciclagem.py  normalizacao.py  notificacoes.py  ocr_rg.py  ordem_assinatura.py  roteiro_assinatura.py  slots.py  storage.py  teams.py  (+3 more)
backend/migrations/: env.py
backend/tests/: smoke_test.py  test_export_tirvu.py  test_slots.py
(+121 files in other folders)
